修改几处数据未联动问题 添加代理表

--- a/miniapp/src/pages/assessment/index.less
+++ b/miniapp/src/pages/assessment/index.less
@@ -258,6 +258,8 @@
 .assessment-page__result-card-info {
   flex: 1;
   min-width: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .assessment-page__result-card-header {
@@ -270,7 +272,7 @@
 .assessment-page__result-card-title {
   font-size: 28rpx;
   font-weight: 600;
-  margin-bottom: 0;
+  margin-bottom: 8rpx;
   
   &--blue {
     color: #1A4099;
