--- a/miniapp/src/pages/majors/intended/index.less
+++ b/miniapp/src/pages/majors/intended/index.less
@@ -302,6 +302,16 @@
   font-size: 28rpx;
   color: #999;
   margin-bottom: 32rpx;
+
+  &--link {
+    color: #1A4099;
+    font-weight: 600;
+    text-decoration: underline;
+    cursor: pointer;
+    &:active {
+      opacity: 0.8;
+    }
+  }
 }
 
 .intended-majors-page__empty-button {
