--- a/miniapp/src/pages/majors/intended/index.less
+++ b/miniapp/src/pages/majors/intended/index.less
@@ -944,6 +944,19 @@
   color: #1A4099;
 }
 
+// 志愿列表分段加载：加载更多按钮
+.intended-majors-page__load-more {
+  padding: 24rpx 32rpx;
+  text-align: center;
+  margin-top: 16rpx;
+}
+
+.intended-majors-page__load-more-button {
+  width: 100%;
+  font-size: 28rpx;
+  color: #1A4099;
+}
+
 .intended-majors-page__delete-button {
   background: #ef4444;
   color: #fff;
